--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-W8NNFT7H');</script>
 <!-- End Google Tag Manager -->
+    <meta name="description" content="Discover Book Insights, your ultimate source for book recommendations, reviews, and curated lists of bestsellers and classics. Find your next great read and explore the world of literature with us.">
     <title>Home - Book Insights</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
