--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     
     <main>
         <section>
-            <h2>Introduction</h2>
+            <h2>Hello Readers!</h2>
             <p>Welcome to Book Insights, your go-to source for information and recommendations on great books. Dive into our curated lists and explore the world of literature.
             Whether you're looking for the latest bestsellers or timeless classics, we provide insightful reviews and recommendations to help you find your next great read. Explore our resources and discover books that will captivate and inspire you.
             We believe that every book has the power to transform lives.
