--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-W8NNFT7H');</script>
 <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7HGLHN89YY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7HGLHN89YY');
+</script>
+    
     <meta name="description" content="Discover Book Insights, your ultimate source for book recommendations, reviews, and curated lists of bestsellers and classics. Find your next great read and explore the world of literature with us.">
     <title>Home - Book Insights</title>
     <link rel="stylesheet" href="styles.css">
